# venture-hud-gps-overlay

./: .dockerignore  Cargo.toml  README.md
src/: main.rs
src/hud/: elements.rs  interpolation.rs  mod.rs  renderer.rs
src/pipeline/: mod.rs  pipeline.rs
src/telemetry/: extractor.rs  mod.rs  parser.rs  vantrue_frames.rs
