[package]
name = "dashcam-hud-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
exiftool = "0.3.1"
image = "0.25.9"
serde_json = "1.0.149"
imageproc = "0.26.1"
indicatif = "0.18.4"
rayon = "1.11.0"
clap = { version = "4.5.60", features = ["derive"] }
quick-error = "2.0.1"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1